2002-10-18  Shigeharu TAKENO  <shige@iee.niit.ac.jp

	* docs/gnuplot.doc, term/atariaes.trm, term/atarivdi.trm, term/be.trm,
	term/x11.trm: Fix a number of misprints.

2002-10-18  Don Taber  <dtaber@blackrat.risc.rockwell.com>

	* term/linux.trm(LINUX_setup): Make driver work with devfs.

2002-10-17  Harald Harders  <h.harders@tu-bs.de>

	* term/epslatex.trm: Surround the graph by \begingroup ... \endgroup so
	that 'unitlength' is not changed globally.

2002-10-12  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/makefile.cyg config/makefile.mgw config/makefile.os2:
 	Added HAVE_DIRENT_H.

2002-10-11  Harald Harders  <h.harders@tu-bs.de>

	* src/misc.c(recursivefullname): Fix.

2002-10-11  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* src/misc.c: Indentation, ansification.

	* term/post.trm: Fix typo.

2002-10-11  Harald Harders  <h.harders@tu-bs.de>

	* src/misc.c(recursivefullname), src/util.c(existdir),
	src/variable.c(fontpath_tbl): Fontpath fix for Windows.

2002-10-10  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Add one missing }.

2002-10-09  Johannes Zellner  <johannes@zellner.org>

	* term/cgm.trm: fixed bug #616167 "cgm color problem"

2002-10-09  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/win/plot.c(main) makefile.cyg makefile.mgw: Added --help and
	--version switches.

2002-10-09  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/set.c: Added missing #ifdef PM3D around declaration of 
	static ... set_palette_... routines.

2002-10-09  Johannes Zellner  <johannes@zellner.org>

	* TODO: started a section for what has to be done before releasing 4.0

2002-10-09  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* term/post.trm(delete_ps_fontfile): Fix compilation for non-PM3D.

2002-10-09  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/post.trm: Remove compiler warning.

2002-10-09  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/misc.c (parse_fillstyle): Make the bulk of this function