@@ -1,3 +1,7 @@
+2002-10-04  Ethan Merritt  <merritt@u.washington.edu>
+
+        * src/gplt_x11.c: Fix crash if asked to draw rotated empty string.
+
 2002-10-18  Shigeharu TAKENO  <shige@iee.niit.ac.jp
 
 	* docs/gnuplot.doc, term/atariaes.trm, term/atarivdi.trm, term/be.trm,
@@ -1337,7 +1341,7 @@
 
 	* docs/titlepag.sty: Changes for the title page of gnuplot.tex: 
 	Show up-to-date gnuplot version (from the file VERSION) and the
-	last modification date (from the tag $Date: 2002/10/18 10:05:57 $).
+	last modification date (from the tag $Date: 2002/10/20 20:28:58 $).
 
 2002-03-07  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
